# mangaplace-rs

./: Cargo.toml  README.md
src/: apis.rs  main.rs  models.rs
